--- a/Data Visualization.ipynb
+++ b/Data Visualization.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,10 @@
    "source": [
     "def normalise_rainfall(df):\n",
     "    \"\"\"\n",
-    "    Normalize rainfall values to meters/mAOD/mASD if unit is mm.\n",
+    "    Normalize rainfall values to millimeters (mm) if the unit is not already in mm.\n",
+    "\n",
+    "    If the `unitName` is not \"mm\", the corresponding `value` is multiplied by 1000 \n",
+    "    to convert it to millimeters, and the `unitName` is updated to \"mm\".\n",
     "    \"\"\"\n",
     "    df.loc[df[\"unitName\"] != \"mm\", \"value\"] *= 1000\n",
     "    df.loc[df[\"unitName\"] != \"mm\", \"unitName\"] = \"mm\"\n",
@@ -2194,7 +2197,10 @@
     "\n",
     "def Rainfall_merged_data(station_name):\n",
     "    \"\"\" \n",
-    "    Merge the station data with the rainfall data in typical day and wet day based on the station name.\n",
+    "    Merge station data with typical and wet day rainfall data for the specified station.\n",
+    "\n",
+    "    This function reads the station, typical day, and wet day rainfall data, filters \n",
+    "    for the given station, normalizes the rainfall values, and merges them into a single DataFrame.\n",
     "    \"\"\"\n",
     "    # read the station data\n",
     "    station_df = pd.read_csv(\"./resources_data/stations.csv\")\n",
@@ -2236,7 +2242,10 @@
     "\n",
     "def Wet_Rainfall_HeatMap(station_name):\n",
     "    \"\"\"\n",
-    "    Create a heatmap with rainfall data in wet day based on the given station.\n",
+    "    Create a heatmap with rainfall and water level data for wet days based on the given station.\n",
+    "\n",
+    "    This function generates a folium map with two heatmaps: one for rainfall and one for water levels,\n",
+    "    using data from the specified station.\n",
     "    \"\"\"\n",
     "    merged_data = Rainfall_merged_data(station_name)\n",
     "\n",
@@ -2305,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2542,10 @@
    "source": [
     "def Typical_Rainfall_HeatMap(station_name):\n",
     "    \"\"\"\n",
-    "    Create a heatmap with rainfall data in typical day based on the given station.\n",
+    "    Create a heatmap with rainfall and water level data for a typical day based on the given station.\n",
+    "\n",
+    "    This function generates a folium map with two heatmaps: one for rainfall and one for water levels,\n",
+    "    using data from the specified station.\n",
     "    \"\"\"\n",
     "    merged_data = Rainfall_merged_data(station_name)\n",
     "\n",
